jpa removal